--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,47 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+
+/* basic stylings */
+:root{
+    --primary: #5F2DED;
+    --secondary: #6c757d;
+    --black: #101212;
+    --gray: #677294;
+}
+
+body{
+    font-family: "Poppins", sans-serif;
+    font-size: 16px;
+    color: var(--black);
+}
+
+.btn-outline {
+    padding: 15px 24px;
+    background-color: transparent;
+    border: 1px solid #5F7AA3;
+    color: var(--black);
+    margin-right: 15px;
+}
+.btn-fill {
+    padding: 15px 24px;
+    background-color: var(--primary);
+    border: 1px solid #5F7AA3;
+    color: #F0F0F0;
+}
+/* Header area */
+.border-nav {
+   border-bottom: 1px solid #F0F0F0;
+}
+
+.nav-item {
+    padding: 0 12px;
+}
+
+.nav-item a {
+    color: var(--black) !important;
+    font-weight: 500;
+}
+
+.nav-item a:hover {
+    color: var(--primary) !important;
+}
