--- a/css/style.css
+++ b/css/style.css
@@ -15,20 +15,59 @@ body{
     color: var(--black);
 }
 
+span {
+    font-family: "Inter", Sans-serif;
+}
+
+img {
+    height: auto;
+    max-width: 100%;
+    border: none;
+    border-radius: 0;
+    box-shadow: none;
+}
+
 .btn-outline {
     padding: 15px 24px;
     background-color: transparent;
     border: 1px solid #5F7AA3;
     color: var(--black);
-    margin-right: 15px;
+    font-family: "Inter", Sans-serif;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 19.5px;
 }
+
+.btn-outline:hover {
+    background-color: var(--primary);
+    color: #F0F0F0;
+}
+
 .btn-fill {
     padding: 15px 24px;
     background-color: var(--primary);
     border: 1px solid #5F7AA3;
     color: #F0F0F0;
+    font-family: "Inter", Sans-serif;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 19.5px;
 }
-/* Header area */
+
+.btn-fill:hover {
+    background-color: #4c23bc;
+    color: #F0F0F0;
+}
+
+/*=================================
+* Header area 
+=================================*/
+
+.navbar-brand img {
+    height: 42px;
+    width: 132px;
+}
+
 .border-nav {
    border-bottom: 1px solid #F0F0F0;
 }
@@ -44,4 +83,594 @@ body{
 
 .nav-item a:hover {
     color: var(--primary) !important;
+}
+
+/*================================= 
+* 3. Hero Area
+==================================*/
+
+.hero {
+    position: relative;
+}
+
+.hero-icons img {
+    position: absolute;
+    z-index: -1;
+}
+
+.hero-icons .icon1 {
+    top: 31%;
+    left: 36px;
+    animation: animationFramesOne 35s alternate infinite linear;
+    -webkit-animation: animationFramesOne 35s alternate infinite linear;
+    width: 22px;
+    height: 21px;
+}
+
+.hero-icons .icon2 {
+    bottom: 100px;
+    left: 72px;
+    animation: animationFramesTwo 35s alternate infinite linear;
+    -webkit-animation: animationFramesTwo 35s alternate infinite linear;
+    width: 42px;
+    height: 42px;
+}
+
+.hero-icons .icon3 {
+    bottom: 30px;
+    left: 300px;
+    animation: animationFramesThree 35s alternate infinite linear;
+    -webkit-animation: animationFramesThree 35s alternate infinite linear;
+    width: 22px;
+    height: 20px;
+}
+
+.hero-icons .icon4 {
+    top: 28%;
+    right: 20%;
+    animation: animationFramesFour 35s alternate infinite linear;
+    -webkit-animation: animationFramesFour 35s alternate infinite linear;
+    width: 15px;
+    height: 15px;
+}
+
+.hero-icons .icon5 {
+    top: 32%;
+    right: 5%;
+    animation: animationFramesFive 35s alternate infinite linear;
+    -webkit-animation: animationFramesFive 35s alternate infinite linear;
+    width: 18px;
+    height: 15px;
+}
+
+.hero-icons .icon6 {
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    right: 7%;
+    /* animation: animationFramesOne 35s alternate infinite linear;
+    -webkit-animation: animationFramesOne 35s alternate infinite linear; */
+    width: 24px;
+    height: 25px;
+}
+
+.hero-icons .icon7 {
+    right: 4%;
+    bottom: 60px;
+    animation: animationFramesFour 35s alternate infinite linear;
+    -webkit-animation: animationFramesFour 35s alternate infinite linear;
+    width: 84px;
+    height: 84px;
+}
+
+.hero-icons .icon8 {
+    right: 4%;
+    bottom: 30px;
+    animation: animationFramesFive 35s alternate infinite linear;
+    -webkit-animation: animationFramesFive 35s alternate infinite linear;
+    width: 43px;
+    height: 31px;
+}
+
+.hero-content .hero-subtitle {
+    font-family: "Inter", Sans-serif;
+    font-size: 18px;
+    color: var(--black);
+    font-weight: 500;
+    margin-bottom: 30px;
+    display: inline-block;
+}
+
+.hero-content .hero-subtitle span {
+    color: #EC0D0D;
+}
+
+.hero-content .hero-title {
+    font-family: "Quicksand", Sans-serif;
+    font-size: 52px;
+    color: var(--black);
+    font-weight: 600;
+    margin-bottom: 36px;
+    line-height: 70px;
+}
+
+.hero-content .shape {
+    position: relative;
+}
+
+.hero-content .shape::before {
+    position: absolute;
+    bottom: 10px;
+    left: 4px;
+    height: 6px;
+    width: 152px;
+    background-color: #F4A710;
+    content: "";
+    z-index: -1;
+    -webkit-animation: ltr 3s infinite;
+    animation: ltr 3s infinite;
+}
+
+.hero-content .icon-text {
+    position: relative;
+}
+
+.hero-content .icon-text img {
+    position: absolute;
+    left: 0;
+    margin-left: -5px;
+    width: 137px;
+    height: 69px;
+}
+
+.hero-content p {
+    font-family: "Inter", Sans-serif;
+    font-size: 18px;
+    line-height: 32px;
+    color: var(--gray);
+}
+
+.hero-img {
+    position: relative;
+}
+
+.hero-avatar {
+    position: absolute;
+    bottom: 96px;
+    left: -64px;
+}
+
+.hero-avatar img {
+    height: 97px;
+    width: 88px;
+}
+
+.hero-icon {
+    position: absolute;
+    top: 114px;
+    left: -116px;
+    animation: animationFramesOne 35s alternate infinite linear;
+    -webkit-animation: animationFramesOne 35s alternate infinite linear;
+}
+
+.hero-icon img {
+    height: 58px;
+    width: 65px;
+}
+
+.hero-right-wrap {
+    position: relative;
+}
+
+.hero-avatar2 {
+    margin-bottom: 130px;
+    left: 20px;
+    position: relative;
+}
+
+.hero-avatar2 img {
+    width: 87px;
+    height: 87px;
+}
+
+.hero-top-selling {
+    background-color: #ffff;
+    padding: 20px;
+    padding-right: 34px;
+    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.03);
+    border: 1px solid #EFF0F2;
+    position: absolute;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    top: 27px;
+    right: -5px;
+}
+
+.hero-top-selling h3 {
+    font-size: 35px;
+    color: #0CCD6B;
+    font-weight: 700;
+    font-family: "Quicksand", sans-serif;
+}
+
+.hero-top-selling span {
+    font-size: 15px;
+    color: #000;
+}
+
+.hero-line-shape .line1 {
+    top: 17px;
+    left: 0;
+}
+
+.hero-line-shape .line2 {
+    bottom: 33px;
+    left: -65px;
+}
+
+.hero-line-shape img {
+    position: absolute;
+    z-index: -1;
+}
+
+.list-unstyle {
+    list-style: none;
+    padding-left: 0;
+}
+
+.hero-list li:not(:last-child) {
+    margin-bottom: 35px;
+}
+
+.hero-list li {
+    font-size: 18px;
+    position: relative;
+    font-weight: 500;
+    padding-left: 30px;
+}
+
+.hero-list li::before {
+    position: absolute;
+    top: 8px;
+    left: 0;
+    content: '\f00c';
+    font-family: "Font Awesome 6 Free";
+    font-style: normal;
+    font-weight: 900;
+    background-color: #5E2EED;
+    width: 17px;
+    height: 17px;
+    font-size: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #ffffff;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+
+.hero-list li:nth-child(2)::before {
+    background-color: #FF5C28;
+}
+
+.hero-list li:nth-child(3)::before {
+    background-color: #06D14B;
+}
+
+.hero-list .list-item {
+    color: #677294;
+    font-family: "Inter", Sans-serif;
+}
+
+.hero-count {
+    background-color: #ffff;
+    padding: 24px;
+    padding-top: 20px;
+    box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.06);
+    display:inline-block;
+    border: 1px solid #EFF0F2;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    margin-top: 70px;
+}
+
+.hero-count h3 {
+    font-size: 35px;
+    color: #FD8619;
+    font-weight: 700;
+    font-family: "Quicksand", sans-serif;
+}
+
+.hero-count span {
+    font-size: 15px;
+    color: #000;
+}
+
+
+@keyframes ltr {
+    0% {
+        width: 0; 
+    }
+    15% {
+        width: 95%; 
+    }
+    85% {
+        opacity: 1; 
+    }
+    90% {
+        width: 95%;
+        opacity: 0; 
+    }
+    to {
+        width: 0;
+        opacity: 0; 
+    } 
+}
+
+@keyframes animationFramesOne {
+    0% {
+        transform: translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0px, 0px) rotate(0deg);
+        -ms-transform: translate(0px, 0px) rotate(0deg);
+        -o-transform: translate(0px, 0px) rotate(0deg);
+    }
+    20% {
+        transform: translate(73px, -1px) rotate(36deg);
+        -webkit-transform: translate(73px, -1px) rotate(36deg);
+        -moz-transform: translate(73px, -1px) rotate(36deg);
+        -ms-transform: translate(73px, -1px) rotate(36deg);
+        -o-transform: translate(73px, -1px) rotate(36deg);
+    }
+    40% {
+        transform: translate(141px, -20px) rotate(72deg);
+        -webkit-transform: translate(141px, -20px) rotate(72deg);
+        -moz-transform: translate(141px, -20px) rotate(72deg);
+        -ms-transform: translate(141px, -20px) rotate(72deg);
+        -o-transform: translate(141px, -20px) rotate(72deg);
+    }
+    60% {
+        transform: translate(83px, -60px) rotate(108deg);
+        -webkit-transform: translate(83px, -60px) rotate(108deg);
+        -moz-transform: translate(83px, -60px) rotate(108deg);
+        -ms-transform: translate(83px, -60px) rotate(108deg);
+        -o-transform: translate(83px, -60px) rotate(108deg);
+    }
+    80% {
+        transform: translate(-40px, 72px) rotate(144deg);
+        -webkit-transform: translate(-40px, 72px) rotate(144deg);
+        -moz-transform: translate(-40px, 72px) rotate(144deg);
+        -ms-transform: translate(-40px, 72px) rotate(144deg);
+        -o-transform: translate(-40px, 72px) rotate(144deg);
+    }
+    100% {
+        transform: translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0px, 0px) rotate(0deg);
+        -ms-transform: translate(0px, 0px) rotate(0deg);
+        -o-transform: translate(0px, 0px) rotate(0deg);
+    } 
+}
+@-webkit-keyframes animationFramesOne {
+    0% {
+        -webkit-transform: translate(0px, 0px) rotate(0deg);
+    }
+    20% {
+        -webkit-transform: translate(73px, -1px) rotate(36deg);
+    }
+    40% {
+        -webkit-transform: translate(141px, 72px) rotate(72deg);
+    }
+    60% {
+        -webkit-transform: translate(83px, 122px) rotate(108deg);
+    }
+    80% {
+        -webkit-transform: translate(-40px, 72px) rotate(144deg);
+    }
+    100% {
+        -webkit-transform: translate(0px, 0px) rotate(0deg);
+    } 
+}
+
+@keyframes animationFramesTwo {
+    0% {
+        transform: translate(0px, 0px) rotate(0deg) scale(1);
+    }
+    20% {
+        transform: translate(73px, -1px) rotate(36deg) scale(0.9);
+    }
+    40% {
+        transform: translate(141px, 72px) rotate(72deg) scale(1);
+    }
+    60% {
+        transform: translate(83px, 122px) rotate(108deg) scale(1.2);
+    }
+    80% {
+        transform: translate(-40px, 72px) rotate(144deg) scale(1.1);
+    }
+    100% {
+        transform: translate(0px, 0px) rotate(0deg) scale(1);
+    } 
+}
+@-webkit-keyframes animationFramesTwo {
+    0% {
+        -webkit-transform: translate(0px, 0px) rotate(0deg) scale(1);
+    }
+    20% {
+        -webkit-transform: translate(73px, -1px) rotate(36deg) scale(0.9);
+    }
+    40% {
+        -webkit-transform: translate(141px, 72px) rotate(72deg) scale(1);
+    }
+    60% {
+        -webkit-transform: translate(83px, 122px) rotate(108deg) scale(1.2);
+    }
+    80% {
+        -webkit-transform: translate(-40px, 72px) rotate(144deg) scale(1.1);
+    }
+    100% {
+        -webkit-transform: translate(0px, 0px) rotate(0deg) scale(1);
+    } 
+}
+@keyframes animationFramesThree {
+    0% {
+        transform: translate(165px, -30px);
+        -webkit-transform: translate(165px, -30px);
+        -moz-transform: translate(165px, -30px);
+        -ms-transform: translate(165px, -30px);
+        -o-transform: translate(165px, -30px);
+    }
+    100% {
+        transform: translate(-60px, 80px);
+        -webkit-transform: translate(-60px, 80px);
+        -moz-transform: translate(-60px, 80px);
+        -ms-transform: translate(-60px, 80px);
+        -o-transform: translate(-60px, 80px);
+    } 
+}
+@-webkit-keyframes animationFramesThree {
+    0% {
+        transform: translate(165px, -30px);
+        -webkit-transform: translate(165px, -30px);
+        -moz-transform: translate(165px, -30px);
+        -ms-transform: translate(165px, -30px);
+        -o-transform: translate(165px, -30px);
+    }
+    100% {
+        transform: translate(-60px, 80px);
+        -webkit-transform: translate(-60px, 80px);
+        -moz-transform: translate(-60px, 80px);
+        -ms-transform: translate(-60px, 80px);
+        -o-transform: translate(-60px, 80px);
+    }
+}
+@keyframes animationFramesFour {
+    0% {
+        transform: translate(0px, 60px) rotate(0deg);
+        -webkit-transform: translate(0px, 60px) rotate(0deg);
+        -moz-transform: translate(0px, 60px) rotate(0deg);
+        -ms-transform: translate(0px, 60px) rotate(0deg);
+        -o-transform: translate(0px, 60px) rotate(0deg);
+    }
+    100% {
+        transform: translate(-100px, -100px) rotate(180deg);
+        -webkit-transform: translate(-100px, -100px) rotate(180deg);
+        -moz-transform: translate(-100px, -100px) rotate(180deg);
+        -ms-transform: translate(-100px, -100px) rotate(180deg);
+        -o-transform: translate(-100px, -100px) rotate(180deg);
+    } 
+}
+@-webkit-keyframes animationFramesFour {
+    0% {
+        transform: translate(0px, 60px) rotate(0deg);
+        -webkit-transform: translate(0px, 60px) rotate(0deg);
+        -moz-transform: translate(0px, 60px) rotate(0deg);
+        -ms-transform: translate(0px, 60px) rotate(0deg);
+        -o-transform: translate(0px, 60px) rotate(0deg);
+    }
+    100% {
+        transform: translate(-100px, -100px) rotate(180deg);
+        -webkit-transform: translate(-100px, -100px) rotate(180deg);
+        -moz-transform: translate(-100px, -100px) rotate(180deg);
+        -ms-transform: translate(-100px, -100px) rotate(180deg);
+        -o-transform: translate(-100px, -100px) rotate(180deg);
+    } 
+}
+@keyframes animationFramesFive {
+    0% {
+        transform: translate(0, 0) rotate(0deg);
+        -webkit-transform: translate(0, 0) rotate(0deg);
+        -moz-transform: translate(0, 0) rotate(0deg);
+        -ms-transform: translate(0, 0) rotate(0deg);
+        -o-transform: translate(0, 0) rotate(0deg);
+    }
+    21% {
+        transform: translate(4px, -20px) rotate(38deg);
+        -webkit-transform: translate(4px, -20px) rotate(38deg);
+        -moz-transform: translate(4px, -20px) rotate(38deg);
+        -ms-transform: translate(4px, -20px) rotate(38deg);
+        -o-transform: translate(4px, -20px) rotate(38deg);
+    }
+    41% {
+        transform: translate(-50px, -60px) rotate(74deg);
+        -webkit-transform: translate(-50px, -60px) rotate(74deg);
+        -moz-transform: translate(-50px, -60px) rotate(74deg);
+        -ms-transform: translate(-50px, -60px) rotate(74deg);
+        -o-transform: translate(-50px, -60px) rotate(74deg);
+    }
+    60% {
+        transform: translate(-20px, -30px) rotate(108deg);
+        -webkit-transform: translate(-20px, -30px) rotate(108deg);
+        -moz-transform: translate(-20px, -30px) rotate(108deg);
+        -ms-transform: translate(-20px, -30px) rotate(108deg);
+        -o-transform: translate(-20px, -30px) rotate(108deg);
+    }
+    80% {
+        transform: translate(-195px, -49px) rotate(144deg);
+        -webkit-transform: translate(-195px, -49px) rotate(144deg);
+        -moz-transform: translate(-195px, -49px) rotate(144deg);
+        -ms-transform: translate(-195px, -49px) rotate(144deg);
+        -o-transform: translate(-195px, -49px) rotate(144deg);
+    }
+    100% {
+        transform: translate(-1px, 0px) rotate(180deg);
+        -webkit-transform: translate(-1px, 0px) rotate(180deg);
+        -moz-transform: translate(-1px, 0px) rotate(180deg);
+        -ms-transform: translate(-1px, 0px) rotate(180deg);
+        -o-transform: translate(-1px, 0px) rotate(180deg);
+    }
+}
+@-webkit-keyframes animationFramesFive {
+    0% {
+        transform: translate(0, 0) rotate(0deg);
+        -webkit-transform: translate(0, 0) rotate(0deg);
+        -moz-transform: translate(0, 0) rotate(0deg);
+        -ms-transform: translate(0, 0) rotate(0deg);
+        -o-transform: translate(0, 0) rotate(0deg);
+    }
+    21% {
+        transform: translate(4px, -20px) rotate(38deg);
+        -webkit-transform: translate(4px, -20px) rotate(38deg);
+        -moz-transform: translate(4px, -20px) rotate(38deg);
+        -ms-transform: translate(4px, -20px) rotate(38deg);
+        -o-transform: translate(4px, -20px) rotate(38deg);
+    }
+    41% {
+        transform: translate(-50px, -60px) rotate(74deg);
+        -webkit-transform: translate(-50px, -60px) rotate(74deg);
+        -moz-transform: translate(-50px, -60px) rotate(74deg);
+        -ms-transform: translate(-50px, -60px) rotate(74deg);
+        -o-transform: translate(-50px, -60px) rotate(74deg);
+    }
+    60% {
+        transform: translate(-20px, -30px) rotate(108deg);
+        -webkit-transform: translate(-20px, -30px) rotate(108deg);
+        -moz-transform: translate(-20px, -30px) rotate(108deg);
+        -ms-transform: translate(-20px, -30px) rotate(108deg);
+        -o-transform: translate(-20px, -30px) rotate(108deg);
+    }
+    80% {
+        transform: translate(-195px, -49px) rotate(144deg);
+        -webkit-transform: translate(-195px, -49px) rotate(144deg);
+        -moz-transform: translate(-195px, -49px) rotate(144deg);
+        -ms-transform: translate(-195px, -49px) rotate(144deg);
+        -o-transform: translate(-195px, -49px) rotate(144deg);
+    }
+    100% {
+        transform: translate(-1px, 0px) rotate(180deg);
+        -webkit-transform: translate(-1px, 0px) rotate(180deg);
+        -moz-transform: translate(-1px, 0px) rotate(180deg);
+        -ms-transform: translate(-1px, 0px) rotate(180deg);
+        -o-transform: translate(-1px, 0px) rotate(180deg);
+    } 
 }
