--- a/css/style.css
+++ b/css/style.css
@@ -872,6 +872,25 @@ img {
     text-align: justify;
 }
 
+.service-link {
+    font-size: 15px;
+    font-family: "Inter", Sans-serif;
+    text-decoration: none;
+    color: #000;
+    font-weight: 500;
+    margin-top: 30px;
+    display: inline-block;
+    opacity: 0;
+    -webkit-transform: translateY(10px);
+    -ms-transform: translateY(10px);
+    transform: translateY(10px);
+}
+
+.card-custom:hover .service-link {
+    opacity: 1;
+    transform: translateY(0);
+}
+
 /*================================= 
 * 6. WCA Area
 ==================================*/
