--- a/css/style.css
+++ b/css/style.css
@@ -839,7 +839,7 @@ img {
     content: "";
 }
 
-.card-custom:hover {
+.card-custom.active, .card-custom:hover {
     border-color: #5F2DED;
     box-shadow: 0px 5px 35px rgba(34, 30, 30, 0.13);
     opacity: 1;
@@ -859,7 +859,7 @@ img {
     opacity: 0;
 }
 
-.card-custom:hover::before {
+.card-custom.active::before, .card-custom:hover::before {
     opacity: 1;
 }
 
@@ -886,7 +886,7 @@ img {
     transform: translateY(10px);
 }
 
-.card-custom:hover .service-link {
+.card-custom.active .service-link, .card-custom:hover .service-link {
     opacity: 1;
     transform: translateY(0);
 }
