--- a/css/style.css
+++ b/css/style.css
@@ -1045,3 +1045,254 @@ ul {
     transition: 0.3s;
     font-size: 13px;
 }
+
+.circle_shape {
+    position: absolute;
+    top: 120px;
+    left: 0;
+    z-index: -1;
+}
+
+.circle_shape .shape {
+    display: inline-block;
+    position: relative;
+}
+
+.circle_shape .shape.shape1 {
+    width: 500px;
+    height: 450px;
+    left: -360px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    background: #EFE0F9;
+    -webkit-animation: circleAnimation 7s linear infinite;
+    animation: circleAnimation 7s linear infinite;
+    display: inherit;
+}
+
+.circle_shape .shape.shape2 {
+    width: 430px;
+    height: 430px;
+    left: -300px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    background: #F8F1FC;
+    -webkit-animation: circleAnimation 7s linear infinite;
+    animation: circleAnimation 8s linear infinite;
+    display: inherit;
+    top: -308px;
+    z-index: -1;
+}
+
+/*================================= 
+* 7. ETM Area
+==================================*/
+.etm {
+    position: relative;
+    z-index: -2;
+}
+.tx-sec-title .etm-title {
+    color: #101212;
+    font-family: "Quicksand", Sans-serif;
+    font-weight: 600;
+    font-size: 42px;
+    line-height: 61px;
+    position: relative;
+    margin-bottom: 35px;
+}
+.mb-70 {
+    margin-bottom: 70px;
+}
+.tx-sec-title .etm-title span {
+    position: relative;
+    padding: 0 4px;
+    margin: 0 -4px;
+}
+.tx-sec-title .etm-title span::before {
+    position: absolute;
+    bottom: 10px;
+    left: 5px;
+    width: 100%;
+    height: 6px;
+    background-color: rgba(255, 94, 44, 0.7);
+    content: "";
+    z-index: -1;
+    -webkit-animation: ltr 3s infinite;
+    animation: ltr 3s infinite;
+}
+
+.tx-sec-title .etm-title .color-black {
+    font-size: 15px;
+    line-height: 29px;
+    color: #817E7E;
+    font-family: "Inter", Sans-serif;
+}
+
+.padding-etm {
+    padding-top: 110px;
+    padding-bottom: 120px;
+}
+.gray-bg-2 {
+    background: #FBF9FF;
+    position: relative;
+    z-index: 1;
+}
+.tx-nesalater-form {
+    position: relative;
+    max-width: 570px;
+    margin: auto;
+}
+.tx-nesalater-form input {
+    border: 1px solid #D4D8DD;
+    background-color: #ffffff;
+    border-radius: 47px;
+    -webkit-border-radius: 47px;
+    -moz-border-radius: 47px;
+    -ms-border-radius: 47px;
+    -o-border-radius: 47px;
+    width: 100%;
+    height: 65px;
+    padding: 0 28px;
+}
+.tx-nesalater-form button {
+    position: absolute;
+    top: 4px;
+    right: 4px;
+    height: 55px;
+    width: 154px;
+    border-radius: 30px;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    -ms-border-radius: 30px;
+    -o-border-radius: 30px;
+}
+.thm-btn {
+    font-size: 15px;
+    padding: 15px 24px;
+    z-index: 1;
+    text-align: center;
+    color: #ffffff;
+    background: #5F2DED;
+    display: inline-block;
+    line-height: 1.3;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+    border-radius: 3px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+    overflow: hidden;
+    position: relative;
+    font-weight: 600;
+    text-transform: capitalize;
+    border: 1px solid transparent;
+    box-shadow: 0px 13px 14px 3px rgba(95, 45, 237, 0.05);
+}
+
+.mt-115 {
+    margin-top: 115px;
+}
+
+.position-1 {
+    top: 20%;
+    left: 6%;
+}
+
+.position-2 {
+    top: 81%;
+    left: 9%;
+}
+
+.position-3 {
+    top: 79%;
+    left: 82%;
+}
+
+.position-4 {
+    top: 14%;
+    left: 82%;
+}
+
+.review_item {
+    position: absolute;
+    display: inline-block;
+}
+
+.review_content {
+    position: absolute;
+    top: -122px;
+    left: -15px;
+    background: white;
+    width: 267px;
+    padding: 20px;
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+    -webkit-transform: translateY(10px);
+    -ms-transform: translateY(10px);
+    transform: translateY(10px);
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.07);
+    z-index: 1;
+}
+
+.review_img {
+    position: relative;
+    cursor: pointer;
+    display: inline-block;
+    z-index: 1;
+}
+
+.review_content h3 {
+    font-size: 14px;
+    font-weight: 600;
+    font-family: "Inter", sans-serif;
+    margin-bottom: 5px;
+}
+
+.review_content p {
+    font-family: "Inter", sans-serif;
+    font-size: 12px;
+    color: #8B8D99;
+    line-height: 21px;
+}
+
+.review_item.active .review_content {
+    opacity: 1;
+    visibility: visible;
+    -webkit-transform: translateY(0px);
+    -ms-transform: translateY(0px);
+    transform: translateY(0px);
+}
+
+.feature_ss img {
+    position: absolute;
+    z-index: 1;
+}
+
+.feature_ss .shape {
+    bottom: 25%;
+    left: 4.2%;
+}
+.feature_ss .ss_01 {
+    top: 31%;
+    left: 10%;
+}
+.feature_ss .ss_02 {
+    bottom: 25%;
+    right: 12%;
+}
